; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_ledc.c_timer_duty_set_get.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_ledc.c_timer_duty_set_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@portTICK_RATE_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @timer_duty_set_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_duty_set_get(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @ledc_set_duty(i32 %7, i32 %8, i32 %9)
  %11 = call i32 @TEST_ESP_OK(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @ledc_update_duty(i32 %12, i32 %13)
  %15 = call i32 @TEST_ESP_OK(i32 %14)
  %16 = load i32, i32* @portTICK_RATE_MS, align 4
  %17 = sdiv i32 1000, %16
  %18 = call i32 @vTaskDelay(i32 %17)
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @ledc_get_duty(i32 %19, i32 %20)
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @TEST_ASSERT_EQUAL_INT32(i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @TEST_ESP_OK(i32) #1

declare dso_local i32 @ledc_set_duty(i32, i32, i32) #1

declare dso_local i32 @ledc_update_duty(i32, i32) #1

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @TEST_ASSERT_EQUAL_INT32(i32, i32) #1

declare dso_local i32 @ledc_get_duty(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
